# DspiderV2

./: .gitignore  docker-compose.basic.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
config/: dev.yaml
data/rabbitmq_data/: .erlang.cookie
doc/: ConfigClass.md  WorkerStatus.md
src/dspider.egg-info/: PKG-INFO  SOURCES.txt
src/dspider/common/: data_source_manager.py  get_env.py  load_config.py  minio_service.py  mongodb_service.py  nacos_service.py  rabbitmq_service.py
src/dspider/worker/: executor.py  master.py  scheduler_manager.py  worker.py  worker_temp.py
src/dspider/worker/rpc/: master_service.proto  master_service_pb2.py  master_service_pb2_grpc.py  master_worker.proto  master_worker_pb2.py  master_worker_pb2_grpc.py  worker_service.proto  worker_service_pb2.py  worker_service_pb2_grpc.py
src/dspider/worker/schedulers/: DbToMqScheduler.py  scheduler.py
src/dspider/worker/spider/: judge_requests_method.py  list_spider.py  list_spider_extractor.py  pagination_getter.py
src/dspider/worker/utils/: load_module.py
test/common/: test_datasource_manager.py  test_load_config.py
test/integration/common/: test_nacos.py  test_rabbitmq_service.py
test/integration/worker/: test_worker.py
test/test_data/: data.py
test/worker/: test_list_spider.py  test_master.py  test_pagenum_requester.py  test_scheduler_manager.py  test_worker.py
