[project]
name = "dspider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["setuptools>=61.0.0"] 
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
dspider = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "dspider",
]

[tool.setuptools.packages.find]
where = ["src"]
