[project]
name = "dspider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.8",
    "fastapi[all]>=0.128.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "minio>=7.2.20",
    "nacos-sdk-python>=3.0.2",
    "pika>=1.3.2",
    "protobuf>=6.33.2",
    "pymongo>=4.15.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["setuptools>=61.0.0"] 
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
dspider = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "dspider",
]

[tool.setuptools.packages.find]
where = ["src"]
